--- a/CodeEditor.Views/Views/MainWindow.xaml
+++ b/CodeEditor.Views/Views/MainWindow.xaml
@@ -1,24 +1,59 @@
 ﻿<Window x:Class="CodeEditor.Views.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="880" Width="1460">
+        Title="MainWindow" Height="880" Width="1460" Background="DimGray">
     <DockPanel>
-        <ToolBarTray DockPanel.Dock="Top">
+        <ToolBarTray DockPanel.Dock="Top" Background="DarkGray">
             <ToolBar>
-                <Button Content="Открыть" Command="{Binding Com}" />
-                <Button Content="Сохранить" Command="{Binding SaveFileCommand}" />
+                <Button Content="Open File" Command="{Binding OpenFileCommand}" />
+                <Button Content="Select Folder" DataContext="{Binding FileExplorerVM}" Command="{Binding SelectFolderCommand}"/>
                 <Separator />
-                <ComboBox Width="100" SelectedIndex="0">
-                    <ComboBoxItem>Option 1</ComboBoxItem>
-                    <ComboBoxItem>Option 2</ComboBoxItem>
-                    <ComboBoxItem>Option 3</ComboBoxItem>
-                </ComboBox>
+                <Button Content="Save" Command="{Binding SaveFileCommand}" />
+                <Separator />
             </ToolBar>
         </ToolBarTray>
-
-        <!-- Основное содержимое окна -->
+        
         <Grid>
-            <TextBox Text="{Binding CodeText}" />
+            <Grid.RowDefinitions>
+                <RowDefinition />
+                <RowDefinition Height="*" />
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="400"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+            
+            <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="0"  DataContext="{Binding FileExplorerVM}" >
+                <StackPanel Orientation="Horizontal" Background="LightGray">
+                    <Button Padding="5" Command="{Binding GoBackCommand}">
+                        <Image Source="pack://application:,,,/CodeEditor.Views;component/Resources/back-button.png" Height="30" />
+                    </Button>
+                    <Button Padding="5" Command="{Binding GoUpCommand}">
+                        <Image Source="pack://application:,,,/CodeEditor.Views;component/Resources/up-arrow-button.png" Height="30" />
+                    </Button>
+                    <TextBlock Text="{Binding CurrentPath}" FontSize="14" Margin="10"/>    
+                </StackPanel>
+                
+
+                <ListView ItemsSource="{Binding Items}" SelectionMode="Single" MaxHeight="370">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal">
+                                <TextBlock Text="{Binding Icon}" FontSize="16" Padding="3, 3"/>
+                                <TextBlock Text="{Binding Name}" FontSize="14" Padding="0, 5"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                    
+                    <ListView.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_DoubleClick"/>
+                        </Style>
+                    </ListView.ItemContainerStyle>
+                </ListView>
+            </StackPanel>
+            
+            <TextBox Grid.Row="0" Grid.Column="1" Text="{Binding CodeText}" Background="DarkGray" />
         </Grid>
     </DockPanel>
 </Window>
