--- a/CodeEditor.Views/Views/MainWindow.xaml
+++ b/CodeEditor.Views/Views/MainWindow.xaml
@@ -1,12 +1,12 @@
 ﻿<Window x:Class="CodeEditor.Views.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="880" Width="1460" Background="DimGray">
+        xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
+        Title="MainWindow" Height="880" Width="1460" Background="#868686">
     <DockPanel>
         <ToolBarTray DockPanel.Dock="Top" Background="DarkGray">
             <ToolBar>
                 <Separator />
-                <!-- <Button Content="Open File" Command="{Binding OpenFileCommand}" /> -->
                 <Button Content="Open Folder" FontSize="20" DataContext="{Binding FileExplorerVM}" Command="{Binding SelectFolderCommand}"/>
                 <Separator />
                 <Button Command="{Binding SaveFileCommand}">
@@ -18,21 +18,12 @@
                     </StackPanel>
                 </Button>
                 <Separator />
-                <!-- <Button Command="{Binding SaveFileAsCommand}"> -->
-                <!--     <StackPanel Orientation="Horizontal"> -->
-                <!--         <Image Source="pack://application:,,,/CodeEditor.Views;component/Resources/save-button.png" Height="12" Margin="0, 1, 4, 0" /> -->
-                <!--         <TextBlock> -->
-                <!--             Save File -->
-                <!--         </TextBlock> -->
-                <!--     </StackPanel> -->
-                <!-- </Button> -->
-                <!-- <Separator /> -->
             </ToolBar>
         </ToolBarTray>
         
         <Grid>
             <Grid.RowDefinitions>
-                <RowDefinition Height="500" />
+                <RowDefinition Height="650" />
                 <RowDefinition />
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
@@ -40,7 +31,7 @@
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
             
-            <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="0"  DataContext="{Binding FileExplorerVM}" >
+            <StackPanel Orientation="Vertical" Grid.Column="0" Grid.Row="0" DataContext="{Binding FileExplorerVM}">
                 <StackPanel Orientation="Horizontal" Background="LightGray">
                     <Button Padding="5" Command="{Binding GoBackCommand}">
                         <Image Source="pack://application:,,,/CodeEditor.Views;component/Resources/back-button.png" Height="30" />
@@ -51,8 +42,7 @@
                     <TextBlock Text="{Binding CurrentPath}" FontSize="14" Margin="10"/>    
                 </StackPanel>
                 
-
-                <ListView ItemsSource="{Binding Items}" SelectionMode="Single" MaxHeight="370">
+                <ListView ItemsSource="{Binding Items}" SelectionMode="Single" MinHeight="400" MaxHeight="400">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -61,19 +51,43 @@
                             </StackPanel>
                         </DataTemplate>
                     </ListView.ItemTemplate>
-                    
                     <ListView.ItemContainerStyle>
                         <Style TargetType="ListViewItem">
                             <EventSetter Event="MouseDoubleClick" Handler="ListViewItem_DoubleClick"/>
                         </Style>
                     </ListView.ItemContainerStyle>
                 </ListView>
+
+                <TextBlock Text="Select Language:" FontSize="14" Margin="10,10,10,0"/>
+                <ComboBox ItemsSource="{Binding DataContext.Languages, RelativeSource={RelativeSource AncestorType=Window}}" 
+                          SelectedItem="{Binding DataContext.SelectedLanguage, RelativeSource={RelativeSource AncestorType=Window}}" 
+                          Width="200"
+                          Margin="10,5,10,0"/>
+                <TextBlock Text="Launch Parameters:" FontSize="14" Margin="10,10,10,0"/>
+                <TextBox Text="{Binding DataContext.LaunchParameters, RelativeSource={RelativeSource AncestorType=Window}}" 
+                         IsReadOnly="True"
+                         Width="250" 
+                         Margin="10,5,10,0"/>
+                <Button Content="Run Code"
+                        Command="{Binding DataContext.RunCodeCommand, RelativeSource={RelativeSource AncestorType=Window}}" 
+                        Width="100"
+                        Foreground="Black"
+                        Margin="10,10,10,0"/>
             </StackPanel>
-            
+                
             <StackPanel Grid.Row="0" Grid.Column="1" Orientation="Vertical">
                 <TextBlock Text="{Binding SelectedFilePath}" MinHeight="30" Padding="5" />
-                <TextBox  Text="{Binding CodeText, UpdateSourceTrigger=PropertyChanged}" 
-                          Background="DarkGray" MinHeight="450" MaxHeight="450" VerticalScrollBarVisibility="Visible"/>
+                <avalonEdit:TextEditor
+                    x:Name="CodeEditor"
+                    Document="{Binding CodeDocument, Mode=TwoWay}"
+                    SyntaxHighlighting="{Binding SyntaxHighlighting}"
+                    Background="#e6e6e7" 
+                    Height="600" 
+                    FontFamily="Consolas"
+                    FontSize="14"
+                    ShowLineNumbers="True"
+                    VerticalScrollBarVisibility="Visible"
+                    HorizontalScrollBarVisibility="Auto"/>
             </StackPanel>
         </Grid>
     </DockPanel>
