--- a/CodeEditor.Views/Views/MainWindow.xaml
+++ b/CodeEditor.Views/Views/MainWindow.xaml
@@ -2,18 +2,89 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
-        Title="MainWindow" Height="880" Width="1460" Background="#868686">
+        Title="MainWindow" Height="860" Width="1440" Background="#868686">
     <DockPanel>
         <ToolBarTray DockPanel.Dock="Top" Background="DarkGray">
             <ToolBar>
                 <Separator />
-                <Button Content="Open Folder" FontSize="20" DataContext="{Binding FileExplorerVM}" Command="{Binding SelectFolderCommand}"/>
+                <Button
+                    FontSize="18"
+                    DataContext="{Binding FileExplorerVM}" Command="{Binding SelectFolderCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image 
+                            Source="pack://application:,,,/CodeEditor.Views;component/Resources/open-folder-button.png" 
+                            Height="25"
+                            Margin="0, 1, 5, 0" />
+                        <TextBlock FontSize="18">
+                            Open Folder
+                        </TextBlock>
+                    </StackPanel>
+                </Button>
+                <Separator />
+                <Button
+                    FontSize="18"
+                    DataContext="{Binding FileExplorerVM}" Command="{Binding CreateFolderCommand}">
+                    <StackPanel Orientation="Horizontal" VerticalAlignment="Center">
+                        <Image 
+                            Source="pack://application:,,,/CodeEditor.Views;component/Resources/new-folder-button.png" 
+                            Height="25"
+                            Margin="0, 1, 5, 0" />
+                        <TextBlock FontSize="18">
+                            New Folder
+                        </TextBlock>
+                    </StackPanel>
+                </Button>
+                <Separator Width="2" />
+                <Button
+                    FontSize="18"
+                    DataContext="{Binding FileExplorerVM}" Command="{Binding CreateFileCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image 
+                            Source="pack://application:,,,/CodeEditor.Views;component/Resources/new-file-button.png" 
+                            Height="25"
+                            Margin="0, 1, 5, 0" />
+                        <TextBlock FontSize="18">
+                            New File
+                        </TextBlock>
+                    </StackPanel>
+                </Button>
                 <Separator />
                 <Button Command="{Binding SaveFileCommand}">
                     <StackPanel Orientation="Horizontal">
-                        <Image Source="pack://application:,,,/CodeEditor.Views;component/Resources/save-button.png" Height="20" Margin="0, 1, 5, 0" />
+                        <Image 
+                            Source="pack://application:,,,/CodeEditor.Views;component/Resources/save-button.png" 
+                            Height="25" 
+                            Margin="0, 1, 5, 0" />
                         <TextBlock FontSize="18">
                             Save File
+                        </TextBlock>
+                    </StackPanel>
+                </Button>
+                <Separator Width="2" />
+                <Button
+                    FontSize="18"
+                    DataContext="{Binding FileExplorerVM}" Command="{Binding RenameItemCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image 
+                            Source="pack://application:,,,/CodeEditor.Views;component/Resources/edit-button.png" 
+                            Height="25"
+                            Margin="0, 1, 5, 0" />
+                        <TextBlock FontSize="18">
+                            Rename Item
+                        </TextBlock>
+                    </StackPanel>
+                </Button>
+                <Separator />
+                <Button
+                    FontSize="18"
+                    DataContext="{Binding FileExplorerVM}" Command="{Binding DeleteItemCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <Image 
+                            Source="pack://application:,,,/CodeEditor.Views;component/Resources/delete-button.png" 
+                            Height="25"
+                            Margin="0, 1, 5, 0" />
+                        <TextBlock FontSize="18">
+                            Delete Item
                         </TextBlock>
                     </StackPanel>
                 </Button>
@@ -42,7 +113,11 @@
                     <TextBlock Text="{Binding CurrentPath}" FontSize="14" Margin="10"/>    
                 </StackPanel>
                 
-                <ListView ItemsSource="{Binding Items}" SelectionMode="Single" MinHeight="400" MaxHeight="400">
+                <ListView ItemsSource="{Binding Items}" 
+                          SelectionMode="Single" 
+                          MinHeight="400" 
+                          MaxHeight="400"
+                          SelectedItem="{Binding SelectedItem, Mode=TwoWay}">
                     <ListView.ItemTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Horizontal">
@@ -66,11 +141,13 @@
                 <TextBlock Text="Launch Parameters:" FontSize="14" Margin="10,10,10,0"/>
                 <TextBox Text="{Binding DataContext.LaunchParameters, RelativeSource={RelativeSource AncestorType=Window}}" 
                          IsReadOnly="True"
-                         Width="250" 
+                         Width="250"
                          Margin="10,5,10,0"/>
                 <Button Content="Run Code"
                         Command="{Binding DataContext.RunCodeCommand, RelativeSource={RelativeSource AncestorType=Window}}" 
                         Width="100"
+                        Height="35"
+                        FontSize="16"
                         Foreground="Black"
                         Margin="10,10,10,0"/>
             </StackPanel>
